--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
     "discordjs-button-pagination": "^3.0.1",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "query-string": "^7.1.1",
+    "unofficial-valorant-api": "^1.0.4"
   }
 }
