--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.8.0",
+    "@koenie06/discord.js-music": "^1.3.0",
     "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
     "discordjs-button-pagination": "^3.0.1",
     "dotenv": "^16.0.0",
+    "ffmpeg-static": "^4.4.1",
     "query-string": "^7.1.1",
-    "unofficial-valorant-api": "^1.0.4"
+    "unofficial-valorant-api": "^1.0.4",
+    "ytdl-core": "^4.11.0"
   }
 }
